--- a/_includes/layouts/home.hbs
+++ b/_includes/layouts/home.hbs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Readex Pro"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <style> body { font-family: 'Readex Pro', serif; } </style>
+    <link rel="stylesheet" href="/styles/resume.css">
     <title>{{ title }}</title>
 </head>
 <body class="bg-dark text-white">
@@ -17,12 +17,30 @@
                 <p>📧 {{ email }}</p>
             </div>
         </section>
+    
+        <section id="section-work-history">
+            <h3>Work History</h2>
+            <hr class="hr" />
+            {{#each workHistory}}
+                <div>
+                    <p>{{ this.timeline }}</p>
+                    <h6>🚧 {{ this.role }} | {{ this.company }}</h6>
+                    <ul>
+                        {{#each achievements}}
+                            <li>{{ this }}</li>
+                        {{/each}}
+                    </ul>
+                    
+                    <hr class="hr" />
+                </div>
+            {{/each}}
+        </section>
 
         <section id="section-skills">
-            <h2>Skills</h2>
-            <ul>
+            <h3>Skills</h2>
+            <ul id="list-skills">
                 {{#each skills}}
-                    <li> {{ this }}</li>
+                    <li>✔️ {{ this }}</li>
                 {{/each}}
             </ul>
         </section>
